# whython-5

./: .gitignore  Cargo.toml  README.md  RUSTFLAGS  fibonacci.why  main.why
benches/: atomic_bool_test.rs
examples/: fibonacci.why
planning/: notes.md  whiteboard.lnk
src/: address.rs  errors.rs  execution.rs  file_loading.rs  lib.rs  lib.rsunused  main.rs  memory.rs  memory_manager.rs  processing.rs  translator.rs  util.rs
src/memory/: memory_manager.rs  runtime_memory.rs
src/memory/runtime_memory/: heap_memory.rs  stack_memory.rs
src/processing/: address.rs  arithmetic.rs  blocks.rs  instructions.rs  lines.rs  preprocessor.rs  processor.rs  reference_manager.rs  symbols.rs  types.rs
src/processing/blocks/: base_block.rs  class_block.rs  function_block.rs  if_block.rs  while_block.rs
src/processing/instructions/: add_instruction_13.rs  and_instruction_6.rs  binary_and_8.rs  binary_not_7.rs  binary_or_12.rs  copy_3.rs  copy_instruction_0.rs  dump_5.rs  dynamic_from_copy_instruction_10.rs  dynamic_jump_11.rs  dynamic_to_copy_instruction_11.rs  equal_instruction_7.rs  equality_14.rs  heap_alloc_2.rs  input_instruction_15.rs  invert_instruction_1.rs  jump_if_instruction_12.rs  jump_if_not_9.rs  jump_if_not_instruction_2.rs  jump_instruction_10.rs  jump_instruction_3.rs  jump_variable_instruction_4.rs  not_equal_15.rs  not_equal_instruction_14.rs  or_instruction_8.rs  print_chars_instruction_9.rs  print_dump_6.rs  print_instruction_5.rs  stack_create_0.rs  stack_down_4.rs  stack_up_1.rs  (+2 more)
src/util/: must_use_option.rs  ref_or_box.rs
tests/: tests.rs
(+36 files in other folders)
